2009-02-10 Alexander Malysh <amalysh at kannel.org>
    * test/*: varios fixes.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for patch.

2009-02-10 Alexander Malysh <amalysh at kannel.org>
    * wap/cookies.c: applied patch that fixes cookies parsing.
      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.
      [Msig-ID: <006201c9865e$bd574230$02b2a8c0@tardis>]

2009-02-10 Alexander Malysh <amalysh at kannel.org>
    * test/test_date.c: added test to test gwlib/date.

2009-02-10 Alexander Malysh <amalysh at kannel.org>
    * gwlib/date.c: applied patch that corrects parsing of iso date
      for YYYMMDDTHHMMSS format.
      Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for this patch.
      [Msg-ID: <F438D467-5767-40D9-898E-C015DDF7923F@dsmagic.com>]

2009-02-06 Alexander Malysh <amalysh at kannel.org>
    * test/test_hmac.c, test/test_md5.c, test/test_octstr_dump.c, test/test_regex.c:
      applied patch that fixes segfaults.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for patch.
      [Msg-ID: <498C3EE0.4030408@telemaque.fr>]

2009-02-06 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: fixed some memory leaks.

2009-02-04  Stipe Tolj  <stolj at kannel.org>
    * README: add the documentation requirement packages for Fedora Core too.
    
2009-02-04  Stipe Tolj  <stolj at kannel.org>
    * test/test_octstr_format.c: fix intendion according to our CodingStyle
      policy. NLC.

2009-01-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: this patch should fix #460.
      Changed %lu -> %llu in octstr_format call when strtoll is used.

2009-01-29 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c, test/test_octstr_format.c: applied patch that adds
      support for %llu, %llx etc. to octstr_format. Also added test.
      Thanks to Nikos Balkanas <nbalkanas at gmail.com> for patch.
      [Msg-Id: <7f4386bc0901290255y3f8f44feya6132b138b0b6003@mail.gmail.com>]
